--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="form-header">
         <div class="image-container">
           <label id="range-label" class="emoji">
-            <img src="/public/book-it-neutral.png" alt="Neutral Mask Hotel">
+            <img src="/book-it-neutral.png" alt="Neutral Mask Hotel">
           </label>
         </div>
       </div>
